@@ -1,3 +1,7 @@
+2003-09-15  Andrew Cagney  <cagney@redhat.com>
+
+	* floatformat.h (struct floatformat): Make "exp_bias" signed.
+
 2003-09-15  Daniel Jacobowitz  <drow@mvista.com>
 
 	* floatformat.h (floatformat_is_valid): Add prototype.
